修改页面引入css文件问题（原先引入less文件，现引入css文件）

--- a/index.html
+++ b/index.html
@@ -49,16 +49,14 @@
       });
     });
   </script>
-
   <!--html5shiv解决ie9以下浏览器对html5新增标签的不识别，并导致CSS不起作用的问题-->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
 
-  <!--  -->
-  <link rel="stylesheet/less" type="text/css" href="css/index.less">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.8.1/less.min.js"></script>
+  <link rel="stylesheet" href="./css/index.css">
   <script type="text/javascript" src="js/cookie.js"></script>
+
 </head>
 <body>
 <!--登录弹窗-->
@@ -463,8 +461,6 @@
 </script>
 <!-- //here ends scrolling icon -->
 <!--登录弹窗-->
-<script src="js/login.js">
-
-</script>
+<script src="js/login.js"></script>
 </body>
 </html>
