--- a/register.html
+++ b/register.html
@@ -45,8 +45,8 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
 
-  <!--  引入log页面的less文件并解析-->
-  <link rel="stylesheet/less" type="text/css" href="css/logRegister.less">
+  <!--  引入log页面的css文件并解析-->
+  <link rel="stylesheet" href="./css/logRegister.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.8.1/less.min.js"></script>
   <script type="text/javascript" src="js/cookie.js"></script>
 
@@ -54,6 +54,7 @@
   <link rel="stylesheet" type="text/css" href="http://unpkg.com/iview/dist/styles/iview.css">
   <script type="text/javascript" src="http://v1.vuejs.org/js/vue.min.js"></script>
   <script type="text/javascript" src="http://unpkg.com/iview@1.0.1/dist/iview.min.js"></script>
+
 </head>
 <body>
 <!--<div id="log_header" class="container">-->
