--- a/detail.html
+++ b/detail.html
@@ -45,9 +45,8 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
 
-  <!--  引入good页面的less文件并解析-->
-  <link rel="stylesheet/less" type="text/css" href="css/good.less">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.8.1/less.min.js"></script>
+  <!--  引入good页面的css文件并解析-->
+  <link rel="stylesheet" href="./css/logRegister.css">
 </head>
 <body>
 <!-- banner -->
