完成“关于”页面

--- a/about.html
+++ b/about.html
@@ -103,36 +103,30 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="about-heading">	
-			<div class="container">
-				<h2>About Us</h2>
-			</div>
-		</div>
 	</div>
 	<!-- //banner -->
+
 	<!-- about -->
 	<div class="about">
 		<!-- about-top -->
 		<div class="agileits-about-top">
 			<div class="container">
 				<div class="agileits-about-top-heading">
-					<h3>Who we are</h3>
+					<h3>我们是谁</h3>
+					<h2>who we are</h2>
 				</div>
 				<div class="agileinfo-top-grids">
 					<div class="col-sm-4 wthree-top-grid">
 						<img src="images/a1.jpg" alt="" />
-						<h4>Curabitur non blandit justo</h4>
-						<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.</p>
+						<p>"Stay Animal Base"宠物救助中心是一家基于网络的注册慈善机构，每年通过我们的救助站给流浪小动物寻找家园</p>
 					</div>
 					<div class="col-sm-4 wthree-top-grid">
 						<img src="images/a2.jpg" alt="" />
-						<h4>Curabitur non blandit justo</h4>
-						<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.</p>
+						<p>我们的在线归航服务免费提供给大型和小型救援中心。我们还帮助审查实践，为他们照顾的猫找到家园。</p>
 					</div>
 					<div class="col-sm-4 wthree-top-grid">
 						<img src="images/a3.jpg" alt="" />
-						<h4>Curabitur non blandit justo</h4>
-						<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.nascetur ridiculus mus. Curabitur ut elit at est tempus volutpat.</p>
+						<p>我们的目标是尽我们所能来提升“救助动物”的形象，并真正使Stay Animal Base成为最佳选择！ </p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -144,34 +138,18 @@
 		<div class="w3-agileits-choose">
 			<div class="container">
 				<div class="agileits-about-top-heading agileits-w3layouts-choose-heading">
-					<h3>Why choose us?</h3>
+					<h3>我们的目标</h3>
+					<h4>Our Target</h4>
 				</div>
 				<div class="agile-choose-grids">
-					<div class="col-sm-4 agile-choose-grid">
+					<div class="col-sm-12 agile-choose-grid">
 						<div class="choose-icon">
-							<i class="fa fa-user" aria-hidden="true"></i>
+<!--							<i class="fa fa-user" aria-hidden="true"></i>-->
 						</div>
 						<div class="choose-info">
-							<h4>Suspendisse ornare vitae ex nec aliquam</h4>
-							<p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
-						</div>
-					</div>
-					<div class="col-sm-4 agile-choose-grid">
-						<div class="choose-icon">
-							<i class="fa fa-cogs" aria-hidden="true"></i>
-						</div>
-						<div class="choose-info">
-							<h4>Suspendisse ornare vitae ex nec aliquam</h4>
-							<p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
-						</div>
-					</div>
-					<div class="col-sm-4 agile-choose-grid">
-						<div class="choose-icon">
-							<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-						</div>
-						<div class="choose-info">
-							<h4>Suspendisse ornare vitae ex nec aliquam</h4>
-							<p>Nunc et massa ut purus porta euismod quis eu erat. Nam ornare faucibus elit sed tempor. Quisque iaculis odio nibh, et auctor tellus rhoncus vel. Maecenas arcu neque, semper eu commodo ut, pharetra vitae erat.</p>
+<!--							<h4>Suspendisse ornare vitae ex nec aliquam</h4>-->
+							<p>通过Stay Animal Base网站，我们帮助全国的救援中心为他们的护理中的流浪动物找到更多的家园，并鼓励更多人采用而不是从宠物店或饲养员那里购买。我们特别致力于为难以到家的流浪动物寻找家园，例如年长的猫，紧张或害羞的猫，FIV阳性猫和长期照顾的猫。</p>
+							<p>我们相信每只动物都有一个家！</p>
 						</div>
 					</div>
 				</div>	
@@ -179,81 +157,81 @@
 		</div>
 		<!-- //choose -->
 		<!-- team -->
-		<div class="team">
-			<div class="container">
-				<div class="agile_team_grids">
-					<div class="col-md-3 agile_team_grid">
-						<div class="agile_team_grid_main">
-							<img src="images/t2.jpg" alt=" " class="img-responsive">
-							<div class="p-mask">
-								<ul class="top-links two">
-									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
-            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="agile_team_grid1">
-							<h3>Riya John</h3>
-							<p>Lorem ipsum</p>
-						</div>
-					</div>
-					<div class="col-md-3 agile_team_grid">
-						<div class="agile_team_grid_main">
-							<img src="images/t1.jpg" alt=" " class="img-responsive">
-							<div class="p-mask">
-								<ul class="top-links two">
-									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
-            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="agile_team_grid1">
-							<h3>Williamson </h3>
-							<p>Consectetur </p>
-						</div>
-					</div>
-					<div class="col-md-3 agile_team_grid three">
-						<div class="agile_team_grid_main">
-							<img src="images/t3.jpg" alt=" " class="img-responsive">
-							<div class="p-mask">
-								<ul class="top-links two">
-									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
-            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="agile_team_grid1">
-							<h3>Rosy John</h3>
-							<p>Suscipit</p>
-						</div>
-					</div>
-					<div class="col-md-3 agile_team_grid four">
-						<div class="agile_team_grid_main">
-							<img src="images/t4.jpg" alt=" " class="img-responsive">
-							<div class="p-mask">
-								<ul class="top-links two">
-									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
-            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
-            <li></li>
-            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="agile_team_grid1">
-							<h3>David Pal</h3>
-							<p>Malesuada </p>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-		</div>
+<!--		<div class="team">-->
+<!--			<div class="container">-->
+<!--				<div class="agile_team_grids">-->
+<!--					<div class="col-md-3 agile_team_grid">-->
+<!--						<div class="agile_team_grid_main">-->
+<!--							<img src="images/t2.jpg" alt=" " class="img-responsive">-->
+<!--							<div class="p-mask">-->
+<!--								<ul class="top-links two">-->
+<!--									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>-->
+<!--            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>-->
+<!--            <li></li>-->
+<!--            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>-->
+<!--								</ul>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="agile_team_grid1">-->
+<!--							<h3>Riya John</h3>-->
+<!--							<p>Lorem ipsum</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="col-md-3 agile_team_grid">-->
+<!--						<div class="agile_team_grid_main">-->
+<!--							<img src="images/t1.jpg" alt=" " class="img-responsive">-->
+<!--							<div class="p-mask">-->
+<!--								<ul class="top-links two">-->
+<!--									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>-->
+<!--            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>-->
+<!--            <li></li>-->
+<!--            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>-->
+<!--								</ul>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="agile_team_grid1">-->
+<!--							<h3>Williamson </h3>-->
+<!--							<p>Consectetur </p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="col-md-3 agile_team_grid three">-->
+<!--						<div class="agile_team_grid_main">-->
+<!--							<img src="images/t3.jpg" alt=" " class="img-responsive">-->
+<!--							<div class="p-mask">-->
+<!--								<ul class="top-links two">-->
+<!--									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>-->
+<!--            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>-->
+<!--            <li></li>-->
+<!--            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>-->
+<!--								</ul>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="agile_team_grid1">-->
+<!--							<h3>Rosy John</h3>-->
+<!--							<p>Suscipit</p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="col-md-3 agile_team_grid four">-->
+<!--						<div class="agile_team_grid_main">-->
+<!--							<img src="images/t4.jpg" alt=" " class="img-responsive">-->
+<!--							<div class="p-mask">-->
+<!--								<ul class="top-links two">-->
+<!--									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>-->
+<!--            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>-->
+<!--            <li></li>-->
+<!--            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>-->
+<!--								</ul>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="agile_team_grid1">-->
+<!--							<h3>David Pal</h3>-->
+<!--							<p>Malesuada </p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="clearfix"> </div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
 		<!-- //team -->
 	</div>
 	<!-- //about -->
