--- a/shopcart.html
+++ b/shopcart.html
@@ -384,7 +384,7 @@
 <!-- copyright -->
 <div class="copyright">
   <div class="container">
-    <p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
+    <p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href=""></a>
     </p>
   </div>
 </div>
