完成待救助动物单个页面

--- a/good.html
+++ b/good.html
@@ -91,7 +91,7 @@
                     <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
                   </ul>
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">画廊</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a class="active" href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -482,7 +482,7 @@
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">画廊</a></li>
             <li><a href="icons.html">Icons</a></li>
           </ul>
         </div>
