--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
                     <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
 										</ul>
 									</li>								
-									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="gallery.html">画廊</a></li>
 									<li><a class="active" href="blog.html">Blog</a></li>
 									<li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -117,7 +117,7 @@
 					<div class="left-blog">
 						<div class="blog-left">
 							<div class="blog-left-left">
-								<p>Posted By <a href="#">Admin</a> &nbsp;&nbsp; on June 2, 2015 &nbsp;&nbsp; <a href="#">Comments (10)</a></p>
+								<p>发布于 <a href="#">Admin</a> &nbsp;&nbsp; 2019年4月11日 &nbsp;&nbsp; <a href="#">收藏（10）</a></p>
 								<a href="single.html"><img src="images/b1.jpg" alt="" /></a>
 							</div>
 							<div class="blog-left-right">
@@ -273,7 +273,7 @@
 						<ul>
 							<li><a class="active" href="index.html">首页</a></li>
 							<li><a href="about.html">关于</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="gallery.html">画廊</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
 					</div>
