--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
                     <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
 										</ul>
 									</li>								
-									<li><a class="active" href="gallery.html">Gallery</a></li>
+									<li><a class="active" href="gallery.html">展示</a></li>
 									<li><a href="blog.html">Blog</a></li>
 									<li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -102,13 +102,14 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<div class="about-heading">	
-			<div class="container">
-				<h2>Our Gallery</h2>
-			</div>
-		</div>
+<!--		<div class="about-heading">	-->
+<!--			<div class="container">-->
+<!--				<h2>Our Gallery</h2>-->
+<!--			</div>-->
+<!--		</div>-->
 	</div>
 	<!-- //banner -->
+
 	<!-- gallery -->
 	<div class="gallery">
 		<div class="container">
@@ -249,7 +250,7 @@
 						<ul>
 							<li><a class="active" href="index.html">首页</a></li>
 							<li><a href="about.html">关于</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="gallery.html">画廊</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
 					</div>
