--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
                   </ul>
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">画廊</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -142,9 +142,6 @@
             <li><a title="登录" id="login"><i class="fa fa-user">登录</i></a></li>
             <li></li>
             <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-            <!--            <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-            <!--            <li><a href="#"><i class="fa fa-rss"></i></a></li>-->
-            <!--            <li><a href="#"><i class="fa fa-vk"></i></a></li>-->
           </ul>
         </div>
         <div class="clearfix"></div>
@@ -403,7 +400,7 @@
           <ul>
             <li><a class="active" href="index.html">首页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">画廊</a></li>
             <li><a href="icons.html">Icons</a></li>
           </ul>
         </div>
