--- a/publish.html
+++ b/publish.html
@@ -78,7 +78,7 @@
                     <li><a class="hvr-bounce-to-bottom active" href="publish.html">发布救助</a></li>
                   </ul>
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">画廊</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -318,7 +318,7 @@
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">画廊</a></li>
             <li><a href="icons.html">Icons</a></li>
           </ul>
         </div>
