--- a/support.html
+++ b/support.html
@@ -90,7 +90,7 @@
                     <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
                   </ul>
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">画廊</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a class="active" href="support.html">支持</a></li>
@@ -226,7 +226,7 @@
           <ul>
             <li><a href="index.html">首页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">画廊</a></li>
             <li><a href="icons.html">Icons</a></li>
           </ul>
         </div>
