--- a/typography.html
+++ b/typography.html
@@ -71,7 +71,7 @@
 											<li><a class="hvr-bounce-to-bottom active" href="typography.html">Typography</a></li>          
 										</ul>
 									</li>								
-									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="gallery.html">画廊</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
@@ -699,7 +699,7 @@
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
 							<li><a href="about.html">关于</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="gallery.html">画廊</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
 					</div>
