--- a/single.html
+++ b/single.html
@@ -118,45 +118,47 @@
 <!--	slider-->
 <div class="w3layouts-banner-slider">
   <div class="container">
-    <div class="slider">
-      <div class="callbacks_container">
-        <ul class="rslides callbacks callbacks1" id="slider4">
-          <li>
-            <div class="agileits-banner-info">
-              <img src="images/b1.jpg" height="" width="100%"/>
-              <!--                <h3>Lorem ipsum dolor sit amet <span>Nulla massa magna</span></h3>-->
-            </div>
-          </li>
-          <li>
-            <div class="agileits-banner-info">
-              <img src="images/b2.jpg" height="" width="100%"/>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <script src="js/responsiveslides.min.js"></script>
-      <script>
-        // You can also use "$(window).load(function() {"
-        $(function () {
-          // Slideshow 4
-          $("#slider4").responsiveSlides({
-            auto: true,
-            pager: true,
-            nav: true,
-            speed: 500,
-            namespace: "callbacks",
-            before: function () {
-              $('.events').append("<li>before event fired.</li>");
-            },
-            after: function () {
-              $('.events').append("<li>after event fired.</li>");
-            }
-          });
-        });
-      </script>
-      <!--banner Slider starts Here-->
-    </div>
+<!--    <div class="slider">-->
+<!--      <div class="callbacks_container">-->
+<!--        <ul class="rslides callbacks callbacks1" id="slider4">-->
+<!--          <li>-->
+<!--            <div class="agileits-banner-info">-->
+<!--              <img src="images/b1.jpg" height="" width="100%"/>-->
+<!--              &lt;!&ndash;                <h3>Lorem ipsum dolor sit amet <span>Nulla massa magna</span></h3>&ndash;&gt;-->
+<!--            </div>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <div class="agileits-banner-info">-->
+<!--              <img src="images/b2.jpg" height="" width="100%"/>-->
+<!--            </div>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--      <script src="js/responsiveslides.min.js"></script>-->
+<!--      <script>-->
+<!--        // You can also use "$(window).load(function() {"-->
+<!--        $(function () {-->
+<!--          // Slideshow 4-->
+<!--          $("#slider4").responsiveSlides({-->
+<!--            auto: true,-->
+<!--            pager: true,-->
+<!--            nav: true,-->
+<!--            speed: 500,-->
+<!--            namespace: "callbacks",-->
+<!--            before: function () {-->
+<!--              $('.events').append("<li>before event fired.</li>");-->
+<!--            },-->
+<!--            after: function () {-->
+<!--              $('.events').append("<li>after event fired.</li>");-->
+<!--            }-->
+<!--          });-->
+<!--        });-->
+<!--      </script>-->
+<!--      &lt;!&ndash;banner Slider starts Here&ndash;&gt;-->
+<!--    </div>-->
 
+    <div class="show-img">
+      <img src="images/g1.jpg"/></div>
     <div class="Card">
       <div class="card">
         <div class="cart-head">
@@ -183,7 +185,11 @@
             <span>状态</span>
           </p>
           <div class="cart-bottom">
-            <i class="fa fa-star-o" aria-hidden="true"></i><span>关注</span>
+            <i class="fa fa-star-o attention-start-btn" aria-hidden="true"></i>
+            <span class="attention-mes">关注</span>
+            <button class="apply-btn">
+              <span>申请领养</span>
+            </button>
           </div>
         </div>
       </div>
