--- a/gallery.html
+++ b/gallery.html
@@ -77,7 +77,7 @@
 										</ul>
 									</li>								
 									<li><a class="active" href="gallery.html">展示</a></li>
-									<li><a href="blog.html">Blog</a></li>
+									<li><a href="blog.html">待救助</a></li>
 									<li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
 									<li><a href="contact.html">联系我们</a></li>
@@ -257,7 +257,7 @@
 					<div class="col-md-6 footer-grid-left">
 						<ul>
 							<li><a href="typography.html">Typography</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="blog.html">待救助</a></li>
 							<li><a href="contact.html">联系我们</a></li>
 						</ul>
 					</div>
