--- a/publish.html
+++ b/publish.html
@@ -79,7 +79,7 @@
                   </ul>
                 </li>
                 <li><a href="gallery.html">画廊</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">待救助</a></li>
                 <li><a href="good.html">商城</a></li>
                 <li><a href="support.html">支持</a></li>
                 <li><a class="" href="contact.html">联系我们</a></li>
@@ -325,7 +325,7 @@
         <div class="col-md-6 footer-grid-left">
           <ul>
             <li><a href="typography.html">Typography</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="blog.html">待救助</a></li>
             <li><a href="contact.html">联系我们</a></li>
           </ul>
         </div>
