将所有页面的底部修改成标准

--- a/single.html
+++ b/single.html
@@ -285,10 +285,10 @@
     <div class="agileits-w3layouts-footer-grids">
       <div class="col-md-4 footer-left">
         <h3>
-          <a href="index.html">Cat <span>Club</span></a>
+          <a href="index.html"><img src="https://img.gzzhitu.com/zhitu-api/1554961200037.png" alt="" class="logo" style="width:100%"></a>
         </h3>
         <div class="footer-social-grids">
-          <ul>
+          <ul style="text-align: center;">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-rss"></i></a></li>
@@ -296,31 +296,39 @@
         </div>
       </div>
       <div class="col-md-4 footer-left">
-        <h4>Navigation</h4>
         <div class="col-md-6 footer-grid-left">
           <ul>
             <li><a class="active" href="index.html">首页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="gallery.html">画廊</a></li>
-            <li><a href="icons.html">Icons</a></li>
           </ul>
         </div>
         <div class="col-md-6 footer-grid-left">
           <ul>
-            <li><a href="typography.html">Typography</a></li>
-            <li><a href="blog.html">待救助</a></li>
-            <li><a href="contact.html">联系我们</a></li>
+            <li><a href="gallery.html">画廊</a></li>
+            <li><a href="publish.html">发布救助</a></li>
           </ul>
         </div>
         <div class="clearfix"></div>
       </div>
       <div class="col-md-4 footer-left">
-        <h4>Newsletter</h4>
-        <p>Subscribe With Us</p>
-        <form action="#" method="post">
-          <input type="email" placeholder="Subscribe" name="Subscribe" required="">
-          <button class="btn1">Go</button>
-        </form>
+<!--        <h4>通讯</h4>-->
+<!--        <p>描述问题</p>-->
+<!--        <form action="#" method="post">-->
+<!--          <input type="email" placeholder="Subscribe" name="Subscribe" required="">-->
+<!--          <button class="btn1">发送</button>-->
+<!--        </form>-->
+        <div class="col-md-6 footer-grid-left">
+          <ul>
+            <li><a href="good.html">商城</a></li>
+            <li><a href="blog.html">待救助</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 footer-grid-left">
+          <ul>
+            <li><a href="support.html">支持</a></li>
+            <li><a href="contact.html">联系我们</a></li>
+          </ul>
+        </div>
       </div>
       <div class="clearfix"></div>
     </div>
