--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="agileinfo-social-grids">
           <ul>
-            <li><a title="个人中心" ><i class="fa fa-user"></i></a></li>
+            <li><a title="个人中心" id="personalInfo"><i class="fa fa-user">个人中心</i></a></li>
             <li><a title="登录" id="login"><i class="fa fa-user">登录</i></a></li>
             <li></li>
             <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
