--- a/publish.html
+++ b/publish.html
@@ -4,29 +4,38 @@
   <title>Publish</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <meta name="keywords" content="" />
-  <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+  <meta name="keywords" content=""/>
+  <script type="application/x-javascript"> addEventListener("load", function () {
+    setTimeout(hideURLbar, 0);
+  }, false);
+
+  function hideURLbar() {
+    window.scrollTo(0, 1);
+  } </script>
   <!-- bootstrap-css -->
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
   <!--// bootstrap-css -->
   <!-- css -->
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
   <!--// css -->
   <!-- font-awesome icons -->
   <link href="css/font-awesome.css" rel="stylesheet">
   <!-- //font-awesome icons -->
   <!-- font -->
   <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
+  <link
+    href="http://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
+        rel='stylesheet' type='text/css'>
   <!-- //font -->
   <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script type="text/javascript">
-    jQuery(document).ready(function($) {
-      $(".scroll").click(function(event){
+    jQuery(document).ready(function ($) {
+      $(".scroll").click(function (event) {
         event.preventDefault();
-        $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+        $('html,body').animate({scrollTop: $(this.hash).offset().top}, 1000);
       });
     });
   </script>
@@ -35,12 +44,37 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <![endif]-->
 
-<!--  图片上传的css和js-->
+  <!--  图片上传的css和js-->
   <link rel="stylesheet" href="css/bootstrap-fileinput.css">
   <script src="js/bootstrap-fileinput.js"></script>
-
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+<!--登录弹窗-->
+<div id="overCurtain"></div>
+<div class="hide-center">
+  <div id="formhead">
+    <div id="formhead-title">
+      用户登录
+    </div>
+    <button type="button" id="close">x</button>
+  </div>
+  <div id="formbody">
+    <div class="loginUserName">
+      <input id="input-topright-loginInput" name="userName" class="loginInput" placeholder="账号" type="text"
+             value="">
+    </div>
+    <div class="loginPassword">
+      <input id="input-bottomright-loginInput" name="password" class="loginInput" placeholder="密码" type="password"
+             style="border-bottom-right-radius:5px;">
+    </div>
+    <div id="formfoot">
+      <button id="BSignIn" type="submit">登录</button>
+    </div>
+  </div>
+</div>
+<!--//登录弹窗-->
+
 <!-- banner -->
 <div class="banner about-banner">
   <div class="header about-header">
@@ -59,7 +93,8 @@
         <div class="top-nav">
           <nav class="navbar navbar-default">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -71,7 +106,9 @@
               <ul class="nav navbar-nav">
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于</a></li>
-                <li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">发布<span class="caret"></span></a>
+                <li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom active" data-toggle="dropdown"
+                                role="button" aria-haspopup="true" aria-expanded="false">发布<span
+                  class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
                     <li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>
@@ -84,30 +121,27 @@
                 <li><a href="support.html">支持</a></li>
                 <li><a class="" href="contact.html">联系我们</a></li>
               </ul>
-              <div class="clearfix"> </div>
+              <div class="clearfix"></div>
             </div>
           </nav>
         </div>
         <div class="agileinfo-social-grids">
           <ul>
-            <li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
-            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li><a title="个人中心" id="personalInfo"><i class="fa fa-user">个人中心</i></a></li>
+            <li><a title="登录" id="login"><i class="fa fa-user">登录</i></a></li>
             <li></li>
             <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
-<!--            <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-<!--            <li><a href="#"><i class="fa fa-rss"></i></a></li>-->
-<!--            <li><a href="#"><i class="fa fa-vk"></i></a></li>-->
           </ul>
         </div>
-        <div class="clearfix"> </div>
+        <div class="clearfix"></div>
       </div>
-      <div class="clearfix"> </div>
+      <div class="clearfix"></div>
     </div>
   </div>
   <div class="about-heading">
     <div class="container">
       <img src="https://img.gzzhitu.com/zhitu-api/1554802234687.png" alt="" style="display: block;margin: 0 auto;">
-<!--      <h2>发布救助</h2>-->
+      <!--      <h2>发布救助</h2>-->
     </div>
   </div>
 </div>
@@ -116,21 +150,24 @@
 <div class="contact-top">
   <!-- container -->
   <div class="container">
-<!--    <div class="map">-->
-<!--      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d158858.18237072596!2d-0.10159865000003898!3d51.52864165000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1436514341845" allowfullscreen></iframe>-->
-<!--    </div>-->
+    <!--    <div class="map">-->
+    <!--      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d158858.18237072596!2d-0.10159865000003898!3d51.52864165000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1436514341845" allowfullscreen></iframe>-->
+    <!--    </div>-->
     <div class="">
       <div class="">
         <div class="form-group">
           <div class="col-md-8">
             <div class="fileinput fileinput-new" data-provides="fileinput" id="uploadImageDiv">
               <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
-                <img src="${companyInfo.image}" alt="" />
+                <img src="${companyInfo.image}" alt=""/>
               </div>
-              <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 150px;"></div>
+              <div class="fileinput-preview fileinput-exists thumbnail"
+                   style="max-width: 200px; max-height: 150px;"></div>
               <div>
                         <span class="btn default btn-file"> <span
-                          class="fileinput-new">选择图片</span> <span class="fileinput-exists">更改</span> <input type="file" name="uploadImage" id="uploadImage" /></span>
+                          class="fileinput-new">选择图片</span> <span class="fileinput-exists">更改</span> <input type="file"
+                                                                                                            name="uploadImage"
+                                                                                                            id="uploadImage"/></span>
                 <a href="#" class="btn default fileinput-exists" data-dismiss="fileinput">移除</a>
                 <span>请选择1M以内图片</span>
               </div>
@@ -141,23 +178,23 @@
         <script>
           var url = '';
           $("#uploadImage").fileupload({
-            url : ROOT + "/security/company/uploadFile",
-            dataType : 'json',
-            autoUpload : false,
-            acceptFileTypes : /(gif|jpe?g|png)$/i,
-            maxFileSize : 1000000, // 1 MB
-            imageMaxWidth : 100,
-            imageMaxHeight : 100,
-            messages : {
-              acceptFileTypes : '文件类型不匹配',
-              maxFileSize : '文件过大',
-              minFileSize : '文件过小'
+            url: ROOT + "/security/company/uploadFile",
+            dataType: 'json',
+            autoUpload: false,
+            acceptFileTypes: /(gif|jpe?g|png)$/i,
+            maxFileSize: 1000000, // 1 MB
+            imageMaxWidth: 100,
+            imageMaxHeight: 100,
+            messages: {
+              acceptFileTypes: '文件类型不匹配',
+              maxFileSize: '文件过大',
+              minFileSize: '文件过小'
             }
-          }).on("fileuploadadd", function(e, data) {
+          }).on("fileuploadadd", function (e, data) {
             // 当文件添加上去时候调用
             $("#titleImageError").html("");
             data.submit()
-          }).on("fileuploaddone", function(e, data) {
+          }).on("fileuploaddone", function (e, data) {
             // 上传完成时调用
             if (data.result.returnState == "ERROR") {
               alert("上传失败")
@@ -168,29 +205,29 @@
 
           function updateMsg() {
             $.ajax({
-              url : ROOT + "/security/company/updateInfo",
-              data : {
-                id : $("#companyId").val(),
-                image : url,
-                companyName : $("#companyName").val(),
-                companySite : $("#companySite").val(),
-                companyLinker : $("#companyLinker").val(),
-                companyTel : $("#companyTel").val()
+              url: ROOT + "/security/company/updateInfo",
+              data: {
+                id: $("#companyId").val(),
+                image: url,
+                companyName: $("#companyName").val(),
+                companySite: $("#companySite").val(),
+                companyLinker: $("#companyLinker").val(),
+                companyTel: $("#companyTel").val()
               },
-              type : "post",
-              success : function(data) {
+              type: "post",
+              success: function (data) {
                 if (data.returnState == "OK") {
                   layer.msg('操作成功', {
-                    icon : 6,
-                    shade : 0.01,
-                    offset : [ '57px', '1100px' ]
+                    icon: 6,
+                    shade: 0.01,
+                    offset: ['57px', '1100px']
                   });
                   $table.bootstrapTable('refresh');
                 } else {
                   layer.msg('操作失败', {
-                    icon : 5,
-                    shade : 0.01,
-                    offset : [ '90px', '900px' ]
+                    icon: 5,
+                    shade: 0.01,
+                    offset: ['90px', '900px']
                   });
                 }
               }
@@ -209,7 +246,7 @@
         </div>
         <hr/>
         <h3>文本域</h3>
-        <textarea class="form-control" rows="5" ></textarea>
+        <textarea class="form-control" rows="5"></textarea>
         <h3>多选和单选框</h3>
         多选:<br/>
         <div class="checkbox">
@@ -290,19 +327,20 @@
           <option>研发部</option>
           <option>后勤部</option>
         </select>
-        <div class="clearfix"> </div>
+        <div class="clearfix"></div>
+      </div>
     </div>
+    <!-- //container -->
   </div>
-  <!-- //container -->
-</div>
-<!-- //contact -->
-<!-- footer -->
+  <!-- //contact -->
+  <!-- footer -->
   <footer>
     <div class="container">
       <div class="agileits-w3layouts-footer-grids">
         <div class="col-md-4 footer-left">
           <h3>
-            <a href="index.html"><img src="https://img.gzzhitu.com/zhitu-api/1554961200037.png" alt="" class="logo" style="width:100%"></a>
+            <a href="index.html"><img src="https://img.gzzhitu.com/zhitu-api/1554961200037.png" alt="" class="logo"
+                                      style="width:100%"></a>
           </h3>
           <div class="footer-social-grids">
             <ul style="text-align: center;">
@@ -351,33 +389,36 @@
       </div>
     </div>
   </footer>
-<!-- footer -->
-<!-- copyright -->
-<div class="copyright">
-  <div class="container">
-    <p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href=""></a></p>
+  <!-- footer -->
+  <!-- copyright -->
+  <div class="copyright">
+    <div class="container">
+      <p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href=""></a></p>
+    </div>
   </div>
+  <!-- //copyright -->
+  <script src="js/SmoothScroll.min.js"></script>
+  <script type="text/javascript" src="js/move-top.js"></script>
+  <script type="text/javascript" src="js/easing.js"></script>
+  <!-- here stars scrolling icon -->
+  <script type="text/javascript">
+    $(document).ready(function () {
+      /*
+        var defaults = {
+        containerID: 'toTop', // fading element id
+        containerHoverID: 'toTopHover', // fading element hover id
+        scrollSpeed: 1200,
+        easingType: 'linear'
+        };
+      */
+
+      $().UItoTop({easingType: 'easeOutQuart'});
+
+    });
+  </script>
+  <!-- //here ends scrolling icon -->
 </div>
-<!-- //copyright -->
-<script src="js/SmoothScroll.min.js"></script>
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
-<!-- here stars scrolling icon -->
-<script type="text/javascript">
-  $(document).ready(function() {
-    /*
-      var defaults = {
-      containerID: 'toTop', // fading element id
-      containerHoverID: 'toTopHover', // fading element hover id
-      scrollSpeed: 1200,
-      easingType: 'linear'
-      };
-    */
-
-    $().UItoTop({ easingType: 'easeOutQuart' });
-
-  });
-</script>
-<!-- //here ends scrolling icon -->
 </body>
 </html>
+<!--登录弹窗-->
+<script src="js/login.js"></script>
